--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,3 +1,10 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
 <html>
     <h1>EU SOU O SEU INDEX</h1>
     {% if posts %}
